--- a/src/index.css
+++ b/src/index.css
@@ -172,3 +172,62 @@
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
+/* 3D Carousel Styles */
+.perspective-container {
+  perspective: 1200px;
+  perspective-origin: 50% 50%;
+}
+
+.carousel-3d {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  transform-style: preserve-3d;
+  transition: transform 0.5s ease-out;
+}
+
+.carousel-item {
+  position: absolute;
+  width: 350px;
+  height: 450px;
+  left: 50%;
+  top: 50%;
+  margin-left: -175px;
+  margin-top: -225px;
+  transform-style: preserve-3d;
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+}
+
+.carousel-item.active {
+  z-index: 10;
+}
+
+/* Responsive adjustments for 3D carousel */
+@media (max-width: 768px) {
+  .carousel-item {
+    width: 280px;
+    height: 380px;
+    margin-left: -140px;
+    margin-top: -190px;
+  }
+}
+
+/* Hide default scrollbar for smoother look */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+/* Line clamp utility */
+.line-clamp-3 {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
